[gd_scene load_steps=12 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://collect_2.ogg" type="AudioStream" id=2]
[ext_resource path="res://font.tres" type="DynamicFont" id=3]
[ext_resource path="res://Game.gd" type="Script" id=4]
[ext_resource path="res://Bot.tscn" type="PackedScene" id=5]
[ext_resource path="res://gameover.ogg" type="AudioStream" id=6]
[ext_resource path="res://font_title.tres" type="DynamicFont" id=7]
[ext_resource path="res://font_credits.tres" type="DynamicFont" id=8]
[ext_resource path="res://Retro Beat.ogg" type="AudioStream" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 520.108, 10 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10.1992, 301.554 )

[node name="Game" type="Node2D"]
script = ExtResource( 4 )

[node name="UI" type="CanvasLayer" parent="."]

[node name="GameUI" type="Control" parent="UI"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="UI/GameUI"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -123.0
margin_bottom = 18.0
grow_horizontal = 0
grow_vertical = 0
custom_fonts/font = ExtResource( 3 )
text = "Score: 00"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeLeft" type="Label" parent="UI/GameUI"]
margin_right = 64.0
margin_bottom = 18.0
custom_fonts/font = ExtResource( 3 )
text = "0030"

[node name="MenuUI" type="Control" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="UI/MenuUI"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="UI/MenuUI/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 36.0
custom_fonts/font = ExtResource( 7 )
text = "Bot Commands You"
align = 1

[node name="Instructions" type="Label" parent="UI/MenuUI/VBoxContainer"]
margin_top = 40.0
margin_right = 1024.0
margin_bottom = 80.0
custom_fonts/font = ExtResource( 3 )
custom_constants/line_spacing = 4
text = "WSAD, Arrow Keys - Move
Press Space to start"
align = 1

[node name="Credits" type="Label" parent="UI/MenuUI"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = -20.0
margin_right = 825.0
custom_fonts/font = ExtResource( 8 )
text = "2020, Created by Kiel97 for TriJam 84, SFX by Kenney from Kenney.nl"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 104.389, 77.4499 )

[node name="Borders" type="Node2D" parent="."]

[node name="StaticBody2D" type="StaticBody2D" parent="Borders"]
position = Vector2( 513.913, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Borders/StaticBody2D"]
shape = SubResource( 1 )

[node name="StaticBody2D2" type="StaticBody2D" parent="Borders"]
position = Vector2( 513.913, 600.678 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Borders/StaticBody2D2"]
shape = SubResource( 1 )

[node name="StaticBody2D3" type="StaticBody2D" parent="Borders"]
position = Vector2( 0, 299.004 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Borders/StaticBody2D3"]
shape = SubResource( 2 )

[node name="StaticBody2D4" type="StaticBody2D" parent="Borders"]
position = Vector2( 1026.49, 299.004 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Borders/StaticBody2D4"]
shape = SubResource( 2 )

[node name="Bot" parent="." instance=ExtResource( 5 )]
position = Vector2( 973.175, 305.31 )
z_index = 5

[node name="Obstacles" type="Node2D" parent="."]

[node name="Particles" type="CPUParticles2D" parent="."]
position = Vector2( 358.065, 151.532 )
emitting = false
amount = 40
emission_shape = 2
emission_rect_extents = Vector2( 12, 12 )
gravity = Vector2( 0, 32 )
angular_velocity = 12.0
angle = 45.0
angle_random = 1.0
scale_amount = 5.0
scale_amount_random = 1.0
color = Color( 0.796078, 0.796078, 0.796078, 1 )

[node name="Alive" type="Timer" parent="Particles"]
wait_time = 0.2

[node name="Timer" type="Timer" parent="."]
wait_time = 0.55

[node name="GameOverSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -12.0

[node name="CollectedSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -20.0
[connection signal="timeout" from="Particles/Alive" to="." method="_on_Alive_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
